Bug: Fixed scroll bug on firefox

--- a/public/css/customers/main.css
+++ b/public/css/customers/main.css
@@ -16,7 +16,10 @@ html, body, #map{
     z-index: 100000;
 }
 
-
+.product-scroll{
+    overflow: hidden;
+    height: 400px !important;
+}
 
 .bg-trans{
     background-color: white;
